# cognition

./: .env  .gitignore  Cargo.toml  README.md
cognition-cli/: Cargo.toml
config/: default.yaml
crates/cognition-core/: Cargo.toml
crates/cognition-core/src/: config.rs  error.rs  lib.rs  logging.rs  models.rs  result.rs  traits.rs  types.rs
crates/cognition-graph/: Cargo.toml
crates/cognition-graph/src/: activation.rs  graph.rs  lib.rs  models.rs
crates/cognition-llm/: Cargo.toml
crates/cognition-memory/: Cargo.toml
crates/cognition-memory/src/: lib.rs
crates/cognition-memory/src/prompts/: fact_extraction.md  mod.rs
crates/cognition-memory/src/retain/: extractor.rs
crates/cognition-py/: Cargo.toml
crates/cognition-runtime/: Cargo.toml
crates/cognition-skills/: Cargo.toml
crates/cognition-storage/: Cargo.toml
crates/cognition-storage/migrations/: 20260319_init_schema.sql
crates/cognition-storage/src/: backend.rs  lib.rs  vault.rs
crates/cognition-storage/tests/: vault_integration.rs
docs/: CogMem.md  Project-Proposal.md  Project-Structure.md  coginition-storage.md  cogmem_memory.md  cognition-core.md
examples/: basic_init.rs
