[package]
name = "cognition-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.21"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.2"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
