[package]
name = "cognition-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
cognition-core = { version = "0.1.0", path = "../cognition-core" }
petgraph = "0.8.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["sync", "macros", "rt-multi-thread"] }
