[package]
name = "cognition-memory"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
cognition-core = { version = "0.1.0", path = "../cognition-core" }
cognition-graph = { version = "0.1.0", path = "../cognition-graph" }
cognition-storage = { version = "0.1.0", path = "../cognition-storage" }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
