[package]
name = "cognition-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
cognition-core = { version = "0.1.0", path = "../cognition-core" }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["std", "derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
